@@ -44,6 +44,7 @@
 							name="company" 
 							size="30"
 							id="company" 
+                                                        value = "<?lsmb company ?>"
 							accesskey="c" />
 						</div>
 					</div>
